# proof_of_concepts

./: CMakeLists.txt  map_pe_via_section.c  ntfs_transactions.c  window_names.c
